[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "virisim"
version = "0.1.4"
description = "Official Python SDK for the ViriSIM AI Governance, Observability, Runtime Control, and Compliance API."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    { name = "Virideed", email = "support@virideed.com" }
]

keywords = [
    "ai",
    "ai governance",
    "ai compliance",
    "llm",
    "langchain",
    "crewai",
    "openai",
    "security",
    "privacy",
    "governance"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
    "requests>=2.28"
]

[project.urls]
Homepage = "https://virideed.com"
Documentation = "https://www.virideed.com/virisim/documentation/?search=agent-tool"
Repository = "https://github.com/Virideed/virisim-python"
Issues = "https://github.com/Virideed/virisim-python/issues"

[tool.setuptools]
packages = ["virisim"]
